add possibility to get expenses by date and month